Primeros cambios en la base de datos terminada y arreglado los combobox

--- a/web/cliente/Create.xhtml
+++ b/web/cliente/Create.xhtml
@@ -28,6 +28,7 @@
                         <p:selectOneMenu id="pago" value="#{clienteController.selected.pago}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_pago}">
                             <f:selectItems value="#{pagoController.itemsAvailableSelectOne}"
                                            var="pagoItem"
+                                           itemLabel="#{pagoItem.descripcion}"
                                            itemValue="#{pagoItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
