--- a/web/compra/View.xhtml
+++ b/web/compra/View.xhtml
@@ -22,6 +22,8 @@
                         </h:outputText>
                         <h:outputText value="#{bundle.ViewCompraLabel_total}"/>
                         <h:outputText value="#{compraController.selected.total}" title="#{bundle.ViewCompraTitle_total}"/>
+                        <h:outputText value="#{bundle.ViewCompraLabel_estado}"/>
+                        <h:outputText value="#{compraController.selected.estado}" title="#{bundle.ViewCompraTitle_estado}"/>
                         <h:outputText value="#{bundle.ViewCompraLabel_cliente}"/>
                         <h:outputText value="#{compraController.selected.cliente}" title="#{bundle.ViewCompraTitle_cliente}"/>
                         <h:outputText value="#{bundle.ViewCompraLabel_juego}"/>
