--- a/web/juego/Create.xhtml
+++ b/web/juego/Create.xhtml
@@ -22,6 +22,12 @@
                         <p:inputText id="modoJuego" value="#{juegoController.selected.modoJuego}" title="#{bundle.CreateJuegoTitle_modoJuego}" required="true" requiredMessage="#{bundle.CreateJuegoRequiredMessage_modoJuego}"/>
                         <p:outputLabel value="#{bundle.CreateJuegoLabel_precio}" for="precio" />
                         <p:inputText id="precio" value="#{juegoController.selected.precio}" title="#{bundle.CreateJuegoTitle_precio}" required="true" requiredMessage="#{bundle.CreateJuegoRequiredMessage_precio}"/>
+                        <p:outputLabel value="#{bundle.CreateJuegoLabel_codigo}" for="codigo" />
+                        <p:selectOneMenu id="codigo" value="#{juegoController.selected.codigo}" required="true" requiredMessage="#{bundle.EditJuegoRequiredMessage_codigo}">
+                            <f:selectItems value="#{codigoController.itemsAvailableSelectOne}"
+                                           var="codigoItem"
+                                           itemValue="#{codigoItem}"/>
+                        </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.CreateJuegoLabel_plataforma}" for="plataforma" />
                         <p:selectOneMenu id="plataforma" value="#{juegoController.selected.plataforma}" required="true" requiredMessage="#{bundle.EditJuegoRequiredMessage_plataforma}">
                             <f:selectItems value="#{plataformaController.itemsAvailableSelectOne}"
