--- a/web/juego/View.xhtml
+++ b/web/juego/View.xhtml
@@ -22,6 +22,8 @@
                         <h:outputText value="#{juegoController.selected.modoJuego}" title="#{bundle.ViewJuegoTitle_modoJuego}"/>
                         <h:outputText value="#{bundle.ViewJuegoLabel_precio}"/>
                         <h:outputText value="#{juegoController.selected.precio}" title="#{bundle.ViewJuegoTitle_precio}"/>
+                        <h:outputText value="#{bundle.ViewJuegoLabel_codigo}"/>
+                        <h:outputText value="#{juegoController.selected.codigo}" title="#{bundle.ViewJuegoTitle_codigo}"/>
                         <h:outputText value="#{bundle.ViewJuegoLabel_plataforma}"/>
                         <h:outputText value="#{juegoController.selected.plataforma}" title="#{bundle.ViewJuegoTitle_plataforma}"/>
                     </p:panelGrid>
