--- a/web/compra/Create.xhtml
+++ b/web/compra/Create.xhtml
@@ -20,22 +20,27 @@
                         <p:calendar id="fecha" pattern="MM/dd/yyyy" value="#{compraController.selected.fecha}" title="#{bundle.EditCompraTitle_fecha}" required="true" requiredMessage="#{bundle.EditCompraRequiredMessage_fecha}" showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateCompraLabel_total}" for="total" />
                         <p:inputText id="total" value="#{compraController.selected.total}" title="#{bundle.CreateCompraTitle_total}" required="true" requiredMessage="#{bundle.CreateCompraRequiredMessage_total}"/>
+                        <p:outputLabel value="#{bundle.CreateCompraLabel_estado}" for="estado" />
+                        <p:inputText id="estado" value="#{compraController.selected.estado}" title="#{bundle.CreateCompraTitle_estado}" required="true" requiredMessage="#{bundle.CreateCompraRequiredMessage_estado}"/>
                         <p:outputLabel value="#{bundle.CreateCompraLabel_cliente}" for="cliente" />
                         <p:selectOneMenu id="cliente" value="#{compraController.selected.cliente}" required="true" requiredMessage="#{bundle.EditCompraRequiredMessage_cliente}">
                             <f:selectItems value="#{clienteController.itemsAvailableSelectOne}"
                                            var="clienteItem"
+                                           itemLabel="#{clienteItem.nombre}"
                                            itemValue="#{clienteItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.CreateCompraLabel_juego}" for="juego" />
                         <p:selectOneMenu id="juego" value="#{compraController.selected.juego}" required="true" requiredMessage="#{bundle.EditCompraRequiredMessage_juego}">
                             <f:selectItems value="#{juegoController.itemsAvailableSelectOne}"
                                            var="juegoItem"
+                                           itemLabel="#{juegoItem.nombre}"
                                            itemValue="#{juegoItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.CreateCompraLabel_pago}" for="pago" />
                         <p:selectOneMenu id="pago" value="#{compraController.selected.pago}" required="true" requiredMessage="#{bundle.EditCompraRequiredMessage_pago}">
                             <f:selectItems value="#{pagoController.itemsAvailableSelectOne}"
                                            var="pagoItem"
+                                           itemLabel="#{pagoItem.descripcion}"
                                            itemValue="#{pagoItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
