--- a/web/compra/List.xhtml
+++ b/web/compra/List.xhtml
@@ -55,6 +55,12 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
+                                <h:outputText value="#{bundle.ListCompraTitle_estado}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.estado}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
                                 <h:outputText value="#{bundle.ListCompraTitle_cliente}"/>
                             </f:facet>
                             <h:outputText value="#{item.cliente}"/>
