--- a/web/juego/List.xhtml
+++ b/web/juego/List.xhtml
@@ -59,6 +59,12 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
+                                <h:outputText value="#{bundle.ListJuegoTitle_codigo}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.codigo}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
                                 <h:outputText value="#{bundle.ListJuegoTitle_plataforma}"/>
                             </f:facet>
                             <h:outputText value="#{item.plataforma}"/>
