--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -40,7 +40,73 @@
         <h:link outcome="/ticket/List" value="Show All Ticket Items"/>
         <br />
         <h:link outcome="/tipoTicket/List" value="Show All TipoTicket Items"/>
+        <br />
+        <h:link outcome="/administrador/List" value="Show All Administrador Items"/>
+        <br />
+        <h:link outcome="/cliente/List" value="Show All Cliente Items"/>
+        <br />
+        <h:link outcome="/codigo/List" value="Show All Codigo Items"/>
+        <br />
+        <h:link outcome="/compra/List" value="Show All Compra Items"/>
+        <br />
+        <h:link outcome="/entrega/List" value="Show All Entrega Items"/>
+        <br />
+        <h:link outcome="/juego/List" value="Show All Juego Items"/>
+        <br />
+        <h:link outcome="/pago/List" value="Show All Pago Items"/>
+        <br />
+        <h:link outcome="/plataforma/List" value="Show All Plataforma Items"/>
+        <br />
+        <h:link outcome="/respuestaTicket/List" value="Show All RespuestaTicket Items"/>
+        <br />
+        <h:link outcome="/ticket/List" value="Show All Ticket Items"/>
+        <br />
+        <h:link outcome="/tipoTicket/List" value="Show All TipoTicket Items"/>
+        <br />
+        <h:link outcome="/administrador/List" value="Show All Administrador Items"/>
+        <br />
+        <h:link outcome="/cliente/List" value="Show All Cliente Items"/>
+        <br />
+        <h:link outcome="/codigo/List" value="Show All Codigo Items"/>
+        <br />
+        <h:link outcome="/compra/List" value="Show All Compra Items"/>
+        <br />
+        <h:link outcome="/entrega/List" value="Show All Entrega Items"/>
+        <br />
+        <h:link outcome="/juego/List" value="Show All Juego Items"/>
+        <br />
+        <h:link outcome="/pago/List" value="Show All Pago Items"/>
+        <br />
+        <h:link outcome="/plataforma/List" value="Show All Plataforma Items"/>
+        <br />
+        <h:link outcome="/respuestaTicket/List" value="Show All RespuestaTicket Items"/>
+        <br />
+        <h:link outcome="/ticket/List" value="Show All Ticket Items"/>
+        <br />
+        <h:link outcome="/tipoTicket/List" value="Show All TipoTicket Items"/>
     </h:body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
