--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -25,6 +25,7 @@
                             <p:menuitem value="Cliente" outcome="/cliente/List.xhtml" />
                             <p:menuitem value="Codigo" outcome="/codigo/List.xhtml" />
                             <p:menuitem value="Compra" outcome="/compra/List.xhtml" />
+                            <p:menuitem value="Entrega" outcome="/entrega/List.xhtml" />
                             <p:menuitem value="Juego" outcome="/juego/List.xhtml" />
                             <p:menuitem value="Pago" outcome="/pago/List.xhtml" />
                             <p:menuitem value="Plataforma" outcome="/plataforma/List.xhtml" />
