--- a/web/cliente/Create.xhtml
+++ b/web/cliente/Create.xhtml
@@ -31,6 +31,10 @@
                                            itemLabel="#{pagoItem.descripcion}"
                                            itemValue="#{pagoItem}"/>
                         </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateClienteLabel_username}" for="username" />
+                        <p:inputText id="username" value="#{clienteController.selected.username}" title="#{bundle.CreateClienteTitle_username}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_username}"/>
+                        <p:outputLabel value="#{bundle.CreateClienteLabel_password}" for="password" />
+                        <p:inputText id="password" value="#{clienteController.selected.password}" title="#{bundle.CreateClienteTitle_password}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_password}"/>
                     </p:panelGrid>
                     <p:commandButton actionListener="#{clienteController.create}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="ClienteCreateDialog.hide()"/>
