--- a/web/cliente/Edit.xhtml
+++ b/web/cliente/Edit.xhtml
@@ -31,6 +31,10 @@
                                            var="pagoItem"
                                            itemValue="#{pagoItem}"/>
                         </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.EditClienteLabel_username}" for="username" />
+                        <p:inputText id="username" value="#{clienteController.selected.username}" title="#{bundle.EditClienteTitle_username}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_username}"/>
+                        <p:outputLabel value="#{bundle.EditClienteLabel_password}" for="password" />
+                        <p:inputText id="password" value="#{clienteController.selected.password}" title="#{bundle.EditClienteTitle_password}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_password}"/>
                     </p:panelGrid>
                     <p:commandButton actionListener="#{clienteController.update}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args, 'ClienteEditDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="ClienteEditDialog.hide()"/>
