Agregada la tabla entrega y modificada y el key code ahora sale como texto.

--- a/web/entrega/Create.xhtml
+++ b/web/entrega/Create.xhtml
@@ -12,14 +12,19 @@
             <h:form id="EntregaCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{entregaController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateEntregaLabel_idkeyCod}" for="idkeyCod" />
-                        <p:inputText id="idkeyCod" value="#{entregaController.selected.idkeyCod}" title="#{bundle.CreateEntregaTitle_idkeyCod}" required="true" requiredMessage="#{bundle.CreateEntregaRequiredMessage_idkeyCod}"/>
+                        <p:outputLabel value="#{bundle.CreateEntregaLabel_id}" for="id" />
+                        <p:inputText id="id" value="#{entregaController.selected.id}" title="#{bundle.CreateEntregaTitle_id}" required="true" requiredMessage="#{bundle.CreateEntregaRequiredMessage_id}"/>
                         <p:outputLabel value="#{bundle.CreateEntregaLabel_idPago}" for="idPago" />
                         <p:selectOneMenu id="idPago" value="#{entregaController.selected.idPago}" required="true" requiredMessage="#{bundle.EditEntregaRequiredMessage_idPago}">
                             <f:selectItems value="#{compraController.itemsAvailableSelectOne}"
                                            var="idPagoItem"
-                                           itemLabel="#{idPagoItem.estado}"
                                            itemValue="#{idPagoItem}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateEntregaLabel_idkeyCod}" for="idkeyCod" />
+                        <p:selectOneMenu id="idkeyCod" value="#{entregaController.selected.idkeyCod}" required="true" requiredMessage="#{bundle.EditEntregaRequiredMessage_idkeyCod}">
+                            <f:selectItems value="#{codigoController.itemsAvailableSelectOne}"
+                                           var="idkeyCodItem"
+                                           itemValue="#{idkeyCodItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:commandButton actionListener="#{entregaController.create}" value="#{bundle.Save}" update="display,:EntregaListForm:datalist,:growl" oncomplete="handleSubmit(args,'EntregaCreateDialog');"/>
