Agregada pagina de ejemplo de login, registro. Modificado el controlador cliente y pago para funcionalidad.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,6 +8,9 @@
     </h:head>
     <h:body>
         Hello from Facelets
+        #{clienteController.selected.nombre}
+        <br />
+        <h:link outcome="/cliente/Registrarse" value="Registrarse" />
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
         <br />
